# M5Stack

./: README.md
Gray/AttitudeIndicator/: attitudeindicator.py
Gray/AttitudeIndicatorArd/: AttitudeIndicatorArd.ino
Gray/Plumb/: plumb.py  plumb2.py
M5TimerCam/web_cam/ap/: platformio.ini
M5TimerCam/web_cam/ap/src/: ap.ino
M5TimerCam/web_cam/bt/: Makefile  README.md  platformio.ini  pyproject.toml  receive_image.py  requirements.txt
M5TimerCam/web_cam/bt/src/: bt.ino
M5TimerCam/web_cam/sta/: README.md  platformio.ini
M5TimerCam/web_cam/sta/src/: sta.ino
StickC/AttitudeIndicatorArd/: AttitudeIndicatorArd.ino
