[project]
name = "bt"
version = "0.1.0"
description = ""
authors = [
    {name = "vitroid",email = "vitroid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
